# mpi-info

./: .gitignore  CMakeLists.txt  README.md  mpi-info.c  util.c
src/main/c/: communication.c  communication.h  mpi-info.c  resources.c  resources.h  util.h
